--- a/up/MainWindow.axaml
+++ b/up/MainWindow.axaml
@@ -50,6 +50,9 @@
                                                 <DataGridTextColumn Header="Phone" Binding="{Binding Phone}"/>
                                         </DataGrid.Columns>
                                 </DataGrid>
+                                <TextBlock Name="CountPatientsTextBlock" Text=""
+                                           VerticalAlignment="Top"
+                                           Margin="0,250,0,0"/>
                                 <Button Content="Add patient" Click="ButtonP_OnClick"/>
                         </Grid>
                 </TabItem>
